--- a/public/style/main.css
+++ b/public/style/main.css
@@ -356,7 +356,7 @@ article
 	background-color: var(--hl);
 	border: 1px solid var(--cbg);
 	color: var(--primary);
-	margin: 1.0em 0;
+	margin: 1.0em 5%;
 	padding: 15px;
 }
 	
